log
Thu 28 Mar 2024 02:22:50 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:9: error: unused variable ‘list’ [-Werror=unused-variable]
   33 |   List* list = (List*)malloc(sizeof(List));
      |         ^~~~
list.c:36:1: error: control reaches end of non-void function [-Werror=return-type]
   36 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
60a6ffc
Thu 28 Mar 2024 02:27:28 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
2e7a84c
Thu 28 Mar 2024 02:49:13 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
97cfb99
Thu 28 Mar 2024 02:52:09 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5ad202f
Thu 28 Mar 2024 02:52:57 PM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
a4cba0f
Thu 28 Mar 2024 02:53:25 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
3542fd1
Thu 28 Mar 2024 02:54:27 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
1cae6a2
Thu 28 Mar 2024 02:55:27 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
d7e8220
Thu 28 Mar 2024 02:57:10 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
fdfe24f
